<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explain"
            android:textStyle="italic" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before"
            android:paddingTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinese" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/japan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/korean" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/after"
            android:textStyle="bold" />

        <com.example.justifytwodemo.TextViewEx
            android:id="@+id/txt_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <com.example.justifytwodemo.TextViewEx
            android:id="@+id/txt_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinese" />

        <com.example.justifytwodemo.TextViewEx
            android:id="@+id/txt_japan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/japan" />

        <com.example.justifytwodemo.TextViewEx
            android:id="@+id/txt_korea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/korean" />
    </LinearLayout>

</ScrollView>